# django-quant-tick

./: .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.api  Makefile  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cryptofeed_werks/: admin.py  apps.py  constants.py  signals.py  storage.py  utils.py
cryptofeed_werks/controllers/: __init__.py  base.py  constants.py  rest.py  s3.py
cryptofeed_werks/exchanges/: __init__.py  api.py
cryptofeed_werks/filters/: symbols.py
cryptofeed_werks/lib/: __init__.py  aggregate.py  calendar.py  candles.py  dataframe.py  download.py  event.py  experimental.py
cryptofeed_werks/management/: base.py
cryptofeed_werks/migrations/: 0001_initial.py  0002_aggregatedtradedata_stats_and_more.py  0002_candledata_remove_serieshistory_series_and_more.py  0003_rename_config_candledata_candle_and_more.py  0004_remove_aggregatedtradedata_exchange_volume_and_more.py
cryptofeed_werks/models/: __init__.py  aggregated_trades.py  api_clients.py  base.py  candles.py  series.py  symbols.py
cryptofeed_werks/serializers/: __init__.py  base.py  candles.py  convert_timeframe.py  convert_to_hourly.py  timeframe.py  trades.py
cryptofeed_werks/tests/: base.py  disable_test_download.py  test_aggregate.py  test_aggregated_trades.py  test_calendar.py  test_candles.py
cryptofeed_werks/views/: __init__.py  base.py  candles.py  convert_aggregated_to_hourly.py  convert_to_hourly.py  trades.py
demo/: .coveragerc  Dockerfile  asgi.py  env.sample  frontend.py  manage.py  proxy.py  tasks.py  workflows.yaml
demo/demo/: admin.py  asgi.py  db_routers.py  permissions.py  urls.py  views.py
demo/streamlit/: sampling_techniques.py  utils.py
docker/: Dockerfile.api  Dockerfile.frontend
docs/: diagram.py
quant_candles/: admin.py  apps.py  constants.py  querysets.py  storage.py
quant_candles/controllers/: __init__.py  base.py  iterators.py  rest.py  s3.py
quant_candles/exchanges/: api.py
quant_candles/filters/: __init__.py  candles.py  symbols.py
quant_candles/lib/: __init__.py  aggregate.py  cache.py  calendar.py  candles.py  clock.py  dataframe.py  download.py  event.py  experimental.py
quant_candles/management/: base.py
quant_candles/migrations/: 0001_initial.py  0001_squashed.py  0001_squashed_0004_symbol_currency_divisor.py  0002_candlereadonlydata_remove_candledata_file_cache_and_more.py  0002_candlereadonlydata_timebasedcandle_and_more.py  0003_alter_tradedatasummary_unique_together.py  0003_tradedatasummary.py  0004_symbol_currency_divisor.py  0005_symbol_is_active.py  0006_alter_candlecache_json_data.py
quant_candles/models/: __init__.py  base.py  candles.py  symbols.py  trades.py
quant_candles/serializers/: __init__.py  base.py  candles.py  convert_timeframe.py  quant_candles.py  symbols.py  timeago.py  timeframe.py  trades.py
quant_candles/signals/: __init__.py  candles.py  trades.py
quant_candles/tests/: base.py  test_aggregate.py  test_calendar.py  test_trades.py
quant_candles/views/: __init__.py  aggregate_candles.py  aggregate_trades.py  base.py  candles.py  convert_trade_data_to_hourly.py  quant_candles.py  symbols.py  trades.py
quant_core/: README.md  pyproject.toml
quant_core/quant_core/: __init__.py  constants.py  features.py  inference.py  prediction.py
quant_horizon/: .dockerignore  Dockerfile  README.md  pyproject.toml  tasks.py
quant_horizon/quant_horizon/: __init__.py  config.py  main.py  schemas.py  storage.py
quant_tick/: admin.py  apps.py  chart.py  constants.py  filters.py  forms.py  pubsub.py  storage.py  testing.py
quant_tick/controllers/: __init__.py  base.py  constants.py  iterators.py  rest.py  s3.py
quant_tick/exchanges/: __init__.py  api.py  funding.py
quant_tick/filters/: __init__.py  candles.py  symbols.py
quant_tick/lib/: __init__.py  aggregate.py  backtest.py  cache.py  calendar.py  calibration.py  candles.py  cross_validation.py  dataframe.py  download.py  experimental.py  feature_data.py  fracdiff_sklearn.py  labels.py  labels_directional.py  ml.py  rf_calibration.py  rf_diagnostics.py  rf_early_stopping.py  rf_interpretation.py  schema.py  simulate.py  sizing.py  stats.py  task_errors.py  train.py  trend_scanning.py  utils.py
quant_tick/management/: base.py
quant_tick/migrations/: 0001_initial.py  0001_initial_migration.py  0001_initial_squashed_0005_remove_signal_close_candle_data_and_more.py  0001_squashed.py  0001_squashed_0004_alter_candle_symbols_alter_candle_table_and_more.py  0002_alter_symbol_exchange_strategy_position_and_more.py  0002_candlereadonlydata_timebasedcandle_and_more.py  0002_exchange_data.py  0002_rename_should_aggregate_trades_symbol_aggregate_trades_and_more.py  0002_renkobrick.py  0002_symbol_symbol_type.py  0003_alter_tradedatasummary_unique_together.py  0003_auto_20240104_0432.py  0003_delete_candlereadonlydata_and_more.py  0003_delete_renkobrick_alter_symbol_exchange.py  0003_market_data.py  0003_signal_delete_position.py  0003_signal_delete_position_remove_symbol_save_clustered_and_more.py  0003_task_state_api_symbol.py  0004_alter_candledata_options.py  0004_featuredata_mlartifact_mlconfig_mlsignal_position_and_more.py  0004_mlartifact_mlconfig_mlfeaturedata_mlrun_mlsignal_and_more.py  0004_mlartifact_mlconfig_mlfeaturedata_mlsignal_position_and_more.py  0004_mlconfig_mlfeaturedata_mlrun_mlartifact_mlsignal.py  0004_remove_coinbase_advanced.py  0004_remove_symbol_save_clustered_and_more.py  0004_symbol_currency_divisor.py  0005_alter_taskstate_exchange_alter_taskstate_task_type.py  0005_remove_mlrun_ml_config_remove_trendscan_ml_run_and_more.py  0005_symbol_is_active.py  0005_symbol_save_clustered_tradedata_clustered_data.py  0006_alter_candlecache_json_data.py  0006_alter_mlconfig_horizon_bars_and_more.py  0006_fundingrate_renkodata_signal_strategy_and_more.py  0006_remove_symbol_save_clustered_and_more.py  0007_mlartifact_calibration_method_mlartifact_calibrator_and_more.py  0007_remove_renkodata_kind_renkodata_parent.py  (+9 more)
quant_tick/models/: base.py  (+14 more)
quant_werks/: apps.py  constants.py  signals.py  storage.py
(+442 files in other folders)
