[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "django-quant-tick"
version = "0.1.5"
description = "Django Quant Tick aggregates candlesticks from high frequency tick data from S3 and REST APIs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex", email = "globophobe@gmail.com" }]
keywords = [
    "django",
    "cryptocurrency",
    "candlesticks",
    "quant",
    "trading",
    "trading-strategies",
    "binance",
    "bitfinex",
    "bitmex",
    "coinbase",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=4.2",
    "django-polymorphic>=3.1.0",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "randomname>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/globophobe/django-quant-tick"
Repository = "https://github.com/globophobe/django-quant-tick"

[tool.hatch.build.targets.wheel]
packages = ["quant_tick"]

[dependency-groups]
deploy = [
    "django-storages[google]>=1.14.6",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "sentry-sdk>=2.39.0",
]
dev = [
    "coverage>=7.11.0",
    "django-storages[google]>=1.14.6",
    "invoke>=2.2.1",
    "ipython>=9.6.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "ruff>=0.15.2",
    "time-machine>=2.19.0",
]

[tool.uv]
exclude-newer = "P7D"
